--- a/fastpizza/config/style-dark.css
+++ b/fastpizza/config/style-dark.css
@@ -127,7 +127,7 @@ h6{
 footer{
 	background-color: #045c44;
 	width: 100%;
-	position: absolute;
+	position: relative;
 	color: #FFE;
 	min-height: 30px;
 	margin-top: 10px;
