--- a/fastpizza/config/style-dark.css
+++ b/fastpizza/config/style-dark.css
@@ -22,6 +22,7 @@ a, a:hover{
 	background-color: #666;
 	padding: 20px;
 	margin: 5px;
+	border-radius: 10px;
 }
 
 h1, h2{
@@ -132,12 +133,12 @@ footer{
 	background-color: #045c44;
 	width: 100%;
 	position: relative;
+	bottom: 0;
 	color: #FFE;
 	min-height: 30px;
 	margin-top: 10px;
 	text-align: center;
 	padding: 5px;
-	bottom: 0;
 	/* margin-bottom: 1px; */
 }
 
